2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/tar.test: Skip if no appropriate tar was found.

2008-01-19  NightStrike  <nightstrike@gmail.com>

	* doc/automake.texi (Dependency Tracking): Fix typo.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/config-ml.in, lib/config.guess, lib/config.sub,
	lib/symlink-tree: Sync from upstream.

	* Makefile.am (WGET_SV_CVS): Renamed from WGETSGO.
	(WGET_SV_GIT_AC, WGET_SV_GIT_GL, WGET_GCC): New.
	(fetch): Update to match current upstream locations.

2008-01-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (DESTDIR, Built sources example): Fix wording.
	* THANKS: Update.
	Reports and suggestions by William Pursell and nightstrike@gmail.com.

2008-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Do not fail if `autoupdate' is not present.
	* tests/obsolete.test: Check for presence of autoupdate.  Apparently,
	FreeBSD may install the other Autoconf programs without a version
	suffix but not autoupdate.

	Fix Heisenbug trying to unset a sometimes-not-set variable.
	* tests/check5.test: Do not error out upon `unset TESTS' due to
	`set -e', in case TESTS was not set.
	* tests/color.test: Likewise.

	* doc/automake.texi (amhello Explained): Fix odd sentence.
	Report by nightstrike@gmail.com.

2008-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Rewrite to be more
	resistant to different quoting styles of $1.

	Clarify texinfo.tex and TEXINFO_TEX semantics.
	* doc/automake.texi (Texinfo): Clarify that by default,
	texinfo.tex is searched in the same directory as the Makefile.am
	that needs it.  Clarify that TEXINFO_TEX has precedence over
	AC_CONFIG_AUX_DIR, and that it requires the user to install and
	distribute it.
	* tests/txinfo22.test: Ensure TEXINFO_TEX is not distributed.
	* THANKS: Update.
	Reports by Dilyan Palauzov and Roumen Petrov.

2008-01-11  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
