@@ -1,3 +1,11 @@
+2008-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/am/mans.am (install-man%SECTION%): Prefer generated manpages
+	over distributed ones.
+	Report and patch by Peter Breitenlohner.
+	* tests/man3.test: New test.
+	* tests/Makefile.am: Update.
+
 2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/tar.test: Skip if no appropriate tar was found.
